use fragments instead of messy activity

--- a/kalturaPlay/src/main/res/layout/activity_main.xml
+++ b/kalturaPlay/src/main/res/layout/activity_main.xml
@@ -1,62 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:configChanges="orientation|screenSize"
-        	  android:id="@+id/content"
-        	  android:background="@drawable/bg">
-        	  
-     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo" />
-     
-     <TextView
-        android:id="@+id/textView"
-        android:layout_width="150dp"
-        android:layout_height="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:text="@string/footer"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#cccccc" />
-        	  
-      <TextView
-        android:id="@+id/infoMsg"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:text="" 
-        android:textColorLink="#00c9ea"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
-      
-     <Button
-       android:layout_width="200dp"
-       android:layout_height="40dp"
-       android:text="@string/demo"
-       android:id="@+id/demoBtn"
-       android:background="@drawable/demo_btn_up"
-       android:layout_marginTop="15dp"
-       android:layout_below="@+id/infoMsg"
-       android:layout_centerHorizontal="true"
-       android:textColor="#ffffff"/>
-
-    
-    <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/player"/>
-
-
-</RelativeLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
