--- a/kalturaPlay/src/main/res/layout/fragment_player.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_player.xml
@@ -1,14 +1,13 @@
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="Fragments.PlayerFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context="Fragments.PlayerFragment">
+        android:id="@+id/player"/>
 
-        <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/player"/>
-    </LinearLayout>
+</FrameLayout>
 
