--- a/kalturaPlay/src/main/res/layout/fragment_login.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,27 +6,20 @@
     android:orientation="vertical"
     android:configChanges="orientation|screenSize"
     android:id="@+id/fragment_login"
-    android:background="@drawable/bg">
+    android:background="@color/white">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="11"
+        android:id="@+id/main_content">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="100dp"
-            android:text="@string/footer"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ff286780" />
+            android:layout_marginTop="100dp"/>
 
         <TextView
             android:id="@+id/infoMsg"
@@ -35,7 +28,7 @@
             android:layout_marginTop="15dp"
             android:layout_below="@+id/imageView"
             android:layout_centerHorizontal="true"
-            android:text=""
+            android:text="@string/main_message"
             android:textColorLink="#00c9ea"
             android:textColor="#ff286780"
             android:gravity="center"
@@ -51,5 +44,26 @@
             android:layout_below="@+id/infoMsg"
             android:layout_centerHorizontal="true"
             android:textColor="#ffffff"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:id="@+id/footerr"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/powered"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/footer"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ff2b7188"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        </RelativeLayout>
+
+
+</LinearLayout>
