--- a/kalturaPlay/src/main/res/layout/fragment_player.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_player.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
     <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/player_height"
         android:id="@+id/player"/>
     <WebView
         android:layout_width="match_parent"
