--- a/kalturaPlay/src/main/res/values/dimens.xml
+++ b/kalturaPlay/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="player_height">150dp</dimen>
+
 </resources>
