--- a/playerSDK/src/main/res/layout/activity_browser.xml
+++ b/playerSDK/src/main/res/layout/activity_browser.xml
@@ -6,7 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.kaltura.playersdk.BrowserActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/browserWebView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
