Moved some of KalturaPlay's source files from their own packages to the app's package, com.kaltura.kalturaplayertoolkit.

--- a/kalturaPlay/src/main/res/layout/fragment_login.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.LoginFragment"
+    tools:context="com.kaltura.kalturaplayertoolkit.LoginFragment"
     android:orientation="vertical"
     android:configChanges="orientation|screenSize"
     android:id="@+id/fragment_login"
