--- a/kalturaPlay/src/main/res/layout/fragment_player.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_player.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="Fragments.PlayerFragment"
+    tools:context="com.kaltura.kalturaplayertoolkit.PlayerFragment"
     android:background="@color/white"
     android:orientation="vertical">
     <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
