--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -7,16 +7,6 @@
     android:background="#ffffea56">
 
 
-    <com.kaltura.playersdk.PlayerViewController
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:visibility="invisible"
-        android:id="@+id/player">
-    </com.kaltura.playersdk.PlayerViewController>
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,5 +32,16 @@
         android:id="@+id/button3"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
+
+    <com.kaltura.playersdk.PlayerViewController
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:visibility="invisible"
+        android:id="@+id/player"
+        android:layout_alignParentBottom="true">
+    </com.kaltura.playersdk.PlayerViewController>
 
 </RelativeLayout>
