--- a/KalturaDemos/app/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kaltura.nativeControlls.MainActivity"
-    android:weightSum="8"
+    android:weightSum="10"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_weight="3">
+        android:orientation="vertical"
+        android:layout_weight="8">
 
-
-        <Button
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Replay"
@@ -38,7 +38,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
+        android:orientation="vertical"
         android:id="@+id/playerContainer">
 
 
@@ -60,11 +61,5 @@
             android:layout_alignBottom="@+id/button"
             android:layout_toRightOf="@+id/button"
             android:layout_toEndOf="@+id/button" />
-
-
     </RelativeLayout>
-
-
-
-
 </LinearLayout>
