--- a/KalturaDemos/MultiPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/MultiPlayerDemo/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kaltura.nativeControlls.MainActivity"
+    tools:context="com.kaltura.multiplayerdemo.MainActivity"
     android:weightSum="10"
     android:id="@+id/parentLinear"
     android:orientation="vertical">
