--- a/KalturaDemos/BasicPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/BasicPlayerDemo/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kaltura.nativeControlls.MainActivity"
+    tools:context="com.kaltura.basicplayerdemo.MainActivity"
     android:weightSum="10"
     android:orientation="vertical">
     <RelativeLayout
@@ -70,6 +70,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:visibility="invisible"/>
+            android:visibility="visible"/>
     </RelativeLayout>
 </LinearLayout>
