--- a/KalturaDemos/inlineplayerdemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/inlineplayerdemo/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="kaltura.inlineplayerdemo.MainActivity">
+    tools:context="com.kaltura.inlineplayerdemo.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
