--- a/KalturaDemos/inlineplayerdemo/src/main/res/layout/fragment_player.xml
+++ b/KalturaDemos/inlineplayerdemo/src/main/res/layout/fragment_player.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="kaltura.inlineplayerdemo.PlayerFragment">
+             tools:context="com.kaltura.inlineplayerdemo.PlayerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.kaltura.playersdk.PlayerViewController
