--- a/testapp/src/main/res/animator/enter_from_right.xml
+++ b/testapp/src/main/res/animator/enter_from_right.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-     android:shareInterpolator="false">
-    <translate
-        android:fromXDelta="100%" android:toXDelta="0%"
-        android:fromYDelta="0%" android:toYDelta="0%"
-        android:duration="700" />
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <objectAnimator
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="500"
+        android:propertyName="x"
+        android:valueFrom="0"
+        android:valueTo="0"
+        android:valueType="floatType" />
+
 </set>
