--- a/KalturaDemos/BasicPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/BasicPlayerDemo/src/main/res/layout/activity_main.xml
@@ -115,10 +115,16 @@
             android:layout_height="wrap_content"
             android:text="Load Player"
             android:id="@+id/loadPlayer"
-            android:layout_alignTop="@+id/ccButto"
-            android:layout_toRightOf="@+id/ccButto"
-            android:layout_toEndOf="@+id/ccButto"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stop Casting"
+            android:id="@+id/stopCasting"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 </LinearLayout>
