--- a/KalturaDemos/CCPlayerDemo/src/main/res/layout/action_bar.xml
+++ b/KalturaDemos/CCPlayerDemo/src/main/res/layout/action_bar.xml
@@ -9,9 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textAllCaps="true"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#fff"
+        android:textAllCaps="false"
+        android:text="@string/app_name"
         android:textStyle="bold" />
 
     <ImageButton
@@ -31,6 +32,15 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
         android:background="@drawable/cast_disconnected_black_512"
+        android:visibility="invisible"/>
+    <ImageButton
+        android:layout_width="15pt"
+        android:layout_height="15pt"
+        android:id="@+id/stream"
+        android:background="@drawable/stream_icon_normal"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:visibility="invisible"/>
 
 </RelativeLayout>
