--- a/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kaltura.basicplayerdemo.MainActivity"
+    tools:context="com.kaltura.ccplayerdemo.MainActivity"
     android:weightSum="10"
     android:orientation="vertical">
     <RelativeLayout
@@ -99,5 +99,32 @@
             android:layout_alignBottom="@+id/button"
             android:layout_toRightOf="@+id/button"
             android:layout_toEndOf="@+id/button" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chromecast"
+            android:id="@+id/ccButto"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:visibility="visible"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Load Player"
+            android:id="@+id/loadPlayer"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stop Casting"
+            android:id="@+id/stopCasting"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 </LinearLayout>
