--- a/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
@@ -14,7 +14,23 @@
         android:orientation="vertical"
         android:layout_weight="8">
 
-    <Button
+        <fragment
+            android:id="@+id/cast_mini_controller"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"
+
+            class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment" />
+
+        <android.support.v7.app.MediaRouteButton
+            android:id="@+id/media_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:mediaRouteTypes="user"
+            android:visibility="gone" />
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Replay"
@@ -80,6 +96,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -112,16 +129,6 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chromecast"
-            android:id="@+id/ccButto"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:visibility="visible"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Load Player"
             android:id="@+id/loadPlayer"
             android:layout_alignParentBottom="true"
@@ -135,6 +142,16 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cast"
+            android:visibility="gone"
+            android:id="@+id/stream_to_cc"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </LinearLayout>
