FEM-358: Offline Widevine Modular (#202)
* LocalAssetsDemo: setLocalContentId. Allow content to be hidden from list.

* String utils: added `String md5(byte[] data)`.

* Cache manager: added `boolean refreshCachedResponse(Uri url)`.

* Added ImpossibleException, for when we think that a condition is impossible.

* Added ExtendedMediaDrmCallback in GoogleMediaFramework

An interface that extends ExoPlayer's MediaDrmCallback and can provide a DrmSessionManager.

When provided to DashRendererBuilder, it will use the returned DrmSessionManager instead of creating a StreamingDrmSessionManager.

* LocalAssetsDemo: added wifi on/off switch, to make it easier to test online/offline.

* KStringUtilities: `String toHexString(byte[] data)`

* Added `offline` package.

Contains a new DrmAdapter class, along with WidevineClassicAdapter (code that moved from LocalAssetsManager) and WidevineModularAdapter (new for offline Widevine Modular).
LocalAssetsManager was moved to `offline` package.

`OfflineDrmManager` provides an offline DrmSessionManager.

* `KPlayerExoDrmCallback` now implements `ExtendedMediaDrmCallback` and provides an offline DrmSessionManager for downloaded media.

* PlayerViewController: AVOID lazy initialization of `mPlayerEventsHash` to prevent race conditions.

* Some cleanup.

Moved LocalAssetsManager back to root package.
Moved the offline DRM Adapters from `offline` to `drm` package.

* Parse the downloaded dash in registerAsset() (WIP).
New: WidevineNotFoundException, for wrapping exceptions that indicate Widevine is not supported/provisioned.
Some cleanups -- moved OfflineDrmSessionManager, OfflineKeySetStorage to their own files.

* SimpleDashParser error handling and description.

* Avoid license acquisition in offline mode.

* Minor, cosmetic.

* Add Android<21 Widevine PSSH workaround in registration.

* Made NullDrmAdapter to an inner class of DrmAdapter.

* Renamed exception WidevineNotSupported to Wide

--- a/KalturaDemos/LocalAssetsDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/LocalAssetsDemo/src/main/res/layout/activity_main.xml
@@ -14,6 +14,20 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wifi"
+            android:id="@+id/switch_wifi"
+            android:checked="true"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
@@ -36,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false">
-    
-    
+
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,6 +101,12 @@
                 android:text="Refresh"
                 android:id="@+id/btn_refresh"
                 android:padding="5dp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Play"
+                android:id="@+id/btn_play"/>
 
         </LinearLayout>
     </HorizontalScrollView>
