Fix "Captoins" typo

--- a/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
+++ b/KalturaDemos/CCPlayerDemo/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Captoins"
+            android:text="Captions"
             android:id="@+id/add_captions"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
